infrastructure/common/kagent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ui
  namespace: kagent
spec:
  tls:
  - hosts:
    - "kagent.${domain}"
    secretName: "${APP}-tls-prod"
  rules:
  - host: "kagent.${domain}"
    http:
      paths:
      - backend:
          service:
            name: kagent-ui
            port:
              name: ui
        path: /
        pathType: Prefix
  ingressClassName: nginx
